[package]
name = "actixweb-task_manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3.1"
uuid = { version = "^1.4.0", feature = ["v4"]}
serde = {version = "^1.0.164", feature = ["derive"]}
aws-config = "^0.55.3"
aws-sdk-dynamodb = "^0.28.0"
log = "^0.4.0"
env_logger = "^0.9.0"
strum = {version = "^0.25", feature = ["derive"]}
strum_macros = "^0.25"